--- a/BookStore/app/directive/helloDirective.html
+++ b/BookStore/app/directive/helloDirective.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  <hello>
-    <div>默认内容</div>
-  </hello>
+  <hello></hello><!--E模式-->
+  <div hello></div><!--A模式-->
+  <div class="hello"></div><!--C模式-->
+  <!-- directive:hello --><!--M模式 类似注解-->
+  <div></div>
 </body>
 
 </html>
